--- a/assets/styles/scss/abstracts/mixins/_forms.scss
+++ b/assets/styles/scss/abstracts/mixins/_forms.scss
@@ -16,7 +16,7 @@
   font-size: inherit;
   margin: $buffer--s;
   padding: $buffer--s;
-  border: none;
+  border: 0;
   border-radius: $small-dimension--xs;
   outline: none;
 
