development-main: page optimization

--- a/assets/styles/scss/abstracts/functions/_shade.scss
+++ b/assets/styles/scss/abstracts/functions/_shade.scss
@@ -5,9 +5,11 @@
 // -  <---------------| Shade |--------------->
 @function shade($color, $percent) {
   @if not _is-color($color) {
-    @error "`#{$color}` is not a valid color for the `$color` argument in " +
-        "the `shade` mixin.";
-  } @else {
+    @error '`#{$color}` is not a valid color for the `$color` argument in ' +
+      'the `shade` mixin.';
+  }
+
+  @else {
     @return mix(#000, $color, $percent);
   }
 }
