--- a/assets/styles/css/style-recourses.css
+++ b/assets/styles/css/style-recourses.css
@@ -38,15 +38,15 @@ html {
 .container {
   width: 100%;
   max-width: 1380px;
-  padding-left: 40px;
   padding-right: 40px;
+  padding-left: 40px;
   margin: 0 auto;
 }
 
 @media (max-width: 770px) {
   .container {
-    padding-left: 20px;
     padding-right: 20px;
+    padding-left: 20px;
   }
 }
 
@@ -78,16 +78,16 @@ nav,
 article,
 section,
 aside {
-  outline: 2px double orangered;
+  outline: 2px double #ff4500;
 }
 
 header,
 footer {
-  outline: 2px double indianred;
+  outline: 2px double #cd5c5c;
 }
 
 div {
-  outline: 2px dashed red;
+  outline: 2px dashed #f00;
 }
 
 h1,
@@ -96,24 +96,24 @@ h3,
 h4,
 h5,
 h6 {
-  outline: 2px double tomato;
+  outline: 2px double #ff6347;
 }
 
 dl,
 dt,
 dd {
-  outline: calc(1px * 1.5) ridge deepskyblue;
+  outline: calc(1px * 1.5) ridge #00bfff;
 }
 
 figure,
 figcaption {
-  outline: calc(1px * 1.5) ridge dodgerblue;
+  outline: calc(1px * 1.5) ridge #1e90ff;
 }
 
 ol,
 ul,
 li {
-  outline: calc(1px * 1.5) ridge steelblue;
+  outline: calc(1px * 1.5) ridge #4682b4;
 }
 
 address,
@@ -121,7 +121,7 @@ blockquote,
 hr,
 p,
 pre {
-  outline: calc(1px * 1.5) ridge blue;
+  outline: calc(1px * 1.5) ridge #00f;
 }
 
 b,
@@ -132,7 +132,7 @@ samp,
 span,
 strong,
 var {
-  outline: 1px dotted lime;
+  outline: 1px dotted #0f0;
 }
 
 a,
@@ -146,7 +146,7 @@ dfn,
 q,
 time,
 wbr {
-  outline: 1px dotted springgreen;
+  outline: 1px dotted #00ff7f;
 }
 
 area,
@@ -155,7 +155,7 @@ img,
 map,
 track,
 video {
-  outline: calc(1px * 1.25) ridge yellow;
+  outline: calc(1px * 1.25) ridge #ff0;
 }
 
 embed,
@@ -164,12 +164,12 @@ object,
 param,
 picture,
 source {
-  outline: calc(1px * 1.25) ridge khaki;
+  outline: calc(1px * 1.25) ridge #f0e68c;
 }
 
 svg,
 math {
-  outline: calc(1px * 1.25) ridge gold;
+  outline: calc(1px * 1.25) ridge #ffd700;
 }
 
 table,
@@ -178,14 +178,14 @@ tbody,
 tfoot,
 colgroup,
 tr {
-  outline: calc(1px * 1.5) solid darkorchid;
+  outline: calc(1px * 1.5) solid #9932cc;
 }
 
 caption,
 col,
 th,
 td {
-  outline: calc(1px * 1.25) solid slateblue;
+  outline: calc(1px * 1.25) solid #6a5acd;
 }
 
 form,
@@ -193,7 +193,7 @@ datalist,
 fieldset,
 optgroup,
 select {
-  outline: calc(1px * 1.5) solid teal;
+  outline: calc(1px * 1.5) solid #008080;
 }
 
 button,
@@ -205,16 +205,16 @@ option,
 output,
 progress,
 textarea {
-  outline: calc(1px * 1.25) solid turquoise;
+  outline: calc(1px * 1.25) solid #40e0d0;
 }
 
 details,
 summary {
-  outline: calc(1px * 1.25) solid deeppink;
+  outline: calc(1px * 1.25) solid #ff1493;
 }
 
 dialog,
 menu {
-  outline: calc(1px * 1.25) solid hotpink;
+  outline: calc(1px * 1.25) solid #ff69b4;
 }
 /*# sourceMappingURL=style-recourses.css.map */
