--- a/assets/styles/scss/abstracts/functions/_tint.scss
+++ b/assets/styles/scss/abstracts/functions/_tint.scss
@@ -5,9 +5,11 @@
 // -  <---------------| Tint |--------------->
 @function tint($color, $percent) {
   @if not _is-color($color) {
-    @error "`#{$color}` is not a valid color for the `$color` argument in " +
-      "the `tint` mixin.";
-  } @else {
+    @error '`#{$color}` is not a valid color for the `$color` argument in ' +
+      'the `tint` mixin.';
+  }
+
+  @else {
     @return mix(#fff, $color, $percent);
   }
 }
