--- a/assets/styles/scss/abstracts/mixins/_typography.scss
+++ b/assets/styles/scss/abstracts/mixins/_typography.scss
@@ -7,16 +7,13 @@
 // -  <---------------| Font-Sizes--Responsive |--------------->
 @mixin font-sizes--responsive($min-vw, $max-vw, $min-value, $max-value) {
   $factor: 1 / ($max-vw - $min-vw) * ($max-value - $min-value);
-  $calc-value: unquote(
-    '#{ $min-value - ($min-vw * $factor) } + #{ 100vw * $factor }'
-  );
+  $calc-value: unquote('#{ $min-value - ($min-vw * $factor) } + #{ 100vw * $factor }');
 
   font-size: $min-value; // Fallback for older browsers
-  font-size: clamp(
-    #{if($min-value > $max-value, $max-value, $min-value)},
+  font-size:
+    clamp(#{if($min-value > $max-value, $max-value, $min-value)},
     #{$calc-value},
-    #{if($min-value > $max-value, $min-value, $max-value)}
-  );
+    #{if($min-value > $max-value, $min-value, $max-value)});
 }
 
 // -  <---------------| Font-Smooth |--------------->
