--- a/assets/styles/scss/waiting-on-migration/components/_button.scss
+++ b/assets/styles/scss/waiting-on-migration/components/_button.scss
@@ -20,15 +20,15 @@ button {
   border-bottom: 1px solid lightness(var(--color-tertiary), 1.2);
   margin-bottom: $buffer--s;
   margin-left: $buffer--s;
-  background: linear-gradient(
-    to bottom,
+  background:
+    linear-gradient(to bottom,
     adjust-hsl(var(--color-tertiary), 1, 1.35, 1.15) 0%,
     adjust-hsl(var(--color-tertiary), 1, 1.15, 1.12) 26%,
-    adjust-hsl(var(--color-tertiary), 1, 1, 1) 100%
-  );
+    adjust-hsl(var(--color-tertiary), 1, 1, 1) 100%);
   border-radius: $small-dimension--s;
   color: lightness(var(--color-secondary), 0.9);
-  text-shadow: 0 -2px 0 lightness(var(--color-secondary), 0.8),
+  text-shadow:
+    0 -2px 0 lightness(var(--color-secondary), 0.8),
     0 1px 1px lightness(var(--color-secondary), 1.2);
   transition: all ($button--speed + s) $button--timing-function;
 
@@ -42,12 +42,11 @@ button {
 }
 
 .btn:hover {
-  background: linear-gradient(
-    to bottom,
+  background:
+    linear-gradient(to bottom,
     adjust-hsl(var(--color-tertiary), 1, 1.35, 1.22) 0%,
     adjust-hsl(var(--color-tertiary), 1, 1.15, 1.19) 26%,
-    adjust-hsl(var(--color-tertiary), 1, 1, 1.07) 100%
-  );
+    adjust-hsl(var(--color-tertiary), 1, 1, 1.07) 100%);
 }
 
 .btn:active {
@@ -68,11 +67,10 @@ button {
   left: 0;
   display: inline-flex;
   height: $button--height;
-  background: linear-gradient(
-    to top,
+  background:
+    linear-gradient(to top,
     adjust-hsl(var(--color-secondary), 1, 1.15, 0.6) 0%,
-    adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px
-  );
+    adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px);
   border-radius: $small-dimension--s;
   box-shadow: $button--box-shadow---before;
   content: '';
