development-main: home-page v1

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1354,13 +1354,10 @@ menu {
 +  PARTIAL SCSS GROUP 5 - `components/`
 \* ========================================================================== */
 /* -------------------------------------------------------------------------- *\
-// *  <<--------------------<< LOGO >>-------------------->>
+// *  <<--------------------<< MAIN LOGO >>-------------------->>
 \* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- *\
-// *  <<--------------------<< RESTAURATION HEADER >>-------------------->>
-\* -------------------------------------------------------------------------- */
-/* -------------------------------------------------------------------------- *\
-// *  <<--------------------<< STORE HEADER >>-------------------->>
+// *  <<--------------------<< MAIN HEADER >>-------------------->>
 \* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- *\
 // *  <<--------------------<< PRODUCT ITEM >>-------------------->>
@@ -1370,6 +1367,9 @@ menu {
 \* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- *\
 // *  <<--------------------<< WORKSHOP ITEM >>-------------------->>
+\* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- *\
+// *  <<--------------------<< MAIN FOOTER >>-------------------->>
 \* -------------------------------------------------------------------------- */
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 6 - `pages/`
