--- a/assets/styles/scss/components/_main-logo.scss
+++ b/assets/styles/scss/components/_main-logo.scss
@@ -4,4 +4,14 @@
 
 // -  <---------------| Main-Logo |--------------->
 @mixin main-logo {
+  .nuxt-logo {
+    margin: auto;
+    animation: 1s appear;
+  }
+
+  @keyframes appear {
+    0% {
+      opacity: 0;
+    }
+  }
 }
