--- a/assets/styles/scss/components/_product-item.scss
+++ b/assets/styles/scss/components/_product-item.scss
@@ -4,4 +4,8 @@
 
 // -  <---------------| Product-Item |--------------->
 @mixin product-item {
+  .c-product-item {
+    padding: $s-site-padding;
+    background-color: $dark-blue;
+  }
 }
