--- a/assets/styles/scss/components/_shopping-cart-item.scss
+++ b/assets/styles/scss/components/_shopping-cart-item.scss
@@ -4,4 +4,8 @@
 
 // -  <---------------| Shopping-Cart-Item |--------------->
 @mixin shopping-cart-item {
+  .c-product-item {
+    padding: $s-site-padding;
+    background-color: $dark-blue;
+  }
 }
