--- a/assets/styles/scss/components/_workshop-item.scss
+++ b/assets/styles/scss/components/_workshop-item.scss
@@ -4,4 +4,20 @@
 
 // -  <---------------| Workshop-Item |--------------->
 @mixin workshop-item {
+  .c-product-item__container {
+    margin-left: 2em;
+  }
+
+  .c-product-item__title {
+    color: $dark-bg;
+  }
+
+  .c-product-item {
+    display: flex;
+    margin: 2em 4em;
+  }
+
+  .c-product-item__image {
+    width: 400px;
+  }
 }
