--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -42,11 +42,11 @@
 // @import 'waiting-on-migration/components/box-border';
 
 @import 'components/main-logo';
-@import 'components/restauration-header';
-@import 'components/store-header';
+@import 'components/main-header';
 @import 'components/product-item';
 @import 'components/shopping-cart-item';
 @import 'components/workshop-item';
+@import 'components/main-footer';
 
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 6 - `pages/`
